--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   equatable: ^2.0.7
   dio: ^5.9.0
+  pretty_logger: ^1.0.0
 
 dev_dependencies:
   flutter_test:
