--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   equatable: ^2.0.7
   dio: ^5.9.0
   pretty_logger: ^1.0.0
-
+  dartz: ^0.10.1
+ 
 dev_dependencies:
   flutter_test:
     sdk: flutter
