--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   dio: ^5.9.0
   pretty_logger: ^1.0.0
   dartz: ^0.10.1
+  flutter_bloc: ^9.1.1
  
 dev_dependencies:
   flutter_test:
