--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   pretty_logger: ^1.0.0
   dartz: ^0.10.1
   flutter_bloc: ^9.1.1
+  get_it: ^8.2.0
  
 dev_dependencies:
   flutter_test:
